--- a/src/Components/BodyMain/BodyMain.sass
+++ b/src/Components/BodyMain/BodyMain.sass
@@ -1,4 +1,20 @@
 .bodyMain
     width: 100%
     height: calc(100% - 100px)
+    position: relative
+    display: flex
+    justify-content: space-around
+    align-items: flex-start
+    flex-wrap: wrap
+
+    & > div 
+        width: 30%
+
+    & > div:first-child
+        width: 100%
+
+    & > div:last-child, & > div:first-child
+        width: calc(100% - 40px)
+
+
     
