--- a/src/Components/NewProduct/NewProduct.sass
+++ b/src/Components/NewProduct/NewProduct.sass
@@ -1,4 +1,11 @@
 .nameProduct
     display: flex
     justify-content: center
-    width: 100%
+
+.buttons
+    position: absolute
+    left: 0 
+    bottom: 0
+    padding: 20px
+    display: flex
+    justify-content: flex-end
