--- a/src/Components/Catalog/Catalog.sass
+++ b/src/Components/Catalog/Catalog.sass
@@ -2,3 +2,31 @@
     display: flex
     justify-content: center
     align-items: center
+
+::-webkit-scrollbar-button 
+    width: 5px
+    height: 0px
+    
+    
+::-webkit-scrollbar-track 
+    background-color:#ecedee
+    
+    
+::-webkit-scrollbar-thumb 
+    -webkit-border-radius: 2px
+    border-radius: 2px
+    background-color:#6dc0c8
+    
+    
+::-webkit-scrollbar-thumb:hover
+    background-color:#56999f
+
+    
+    
+::-webkit-resizer
+    width: 4px
+    height: 0px
+
+
+::-webkit-scrollbar
+    width: 4px
