--- a/src/Components/NewProduct/NewProduct.sass
+++ b/src/Components/NewProduct/NewProduct.sass
@@ -2,10 +2,24 @@
     display: flex
     justify-content: center
 
+.delete
+    position: absolute
+    top: 15px
+    right: 15px
+
 .buttons
     position: absolute
     left: 0 
     bottom: 0
     padding: 20px
+    height: 100px
     display: flex
-    justify-content: flex-end
+    justify-content: space-between
+
+    .date
+        font-size: 13px
+        text-align: left
+
+    .category
+        font-size: 15px
+        text-align: left
