--- a/src/Components/BodyMain/BodyMain.sass
+++ b/src/Components/BodyMain/BodyMain.sass
@@ -6,6 +6,7 @@
     justify-content: space-around
     align-items: flex-start
     flex-wrap: wrap
+    padding-bottom: 100px
 
     & > div 
         width: 30%
