--- a/src/Components/Category/Category.sass
+++ b/src/Components/Category/Category.sass
@@ -6,3 +6,7 @@
     padding: 15px 0
     font-size: 25px
     cursor: pointer
+    transition: .3s
+
+    &:hover
+        background: rgba(220, 220, 220, .7)
