--- a/src/Components/HeaderLeftBar/HeaderLeftBar.sass
+++ b/src/Components/HeaderLeftBar/HeaderLeftBar.sass
@@ -1,3 +1,10 @@
 .headerLeftBar
-    width: 100%
+    width: calc(100% - 20px0
     height: 100px
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 0 10px
+
+    div:first-child
+        width: 140px
